# readtapl

./: .gitignore
arith/: arith.cabal
arith/src/: Core.hs  Main.hs  Parser.hs
arith/test/: test.f
untyped/: untyped.cabal
untyped/src/: Core.hs  Main.hs  MinPrint.hs  Parser.hs
untyped/test/: test2.f
